src/test/ui/consts/const_let_refutable.stderr
error[E0005]: refutable pattern in function argument: `&[]` not covered
  --> $DIR/const_let_refutable.rs:3:16
   |
LL | const fn slice([a, b]: &[i32]) -> i32 {
   |                ^^^^^^ pattern `&[]` not covered

error[E0723]: can only call other `min_const_fn` within a `min_const_fn` (see issue #57563)
  --> $DIR/const_let_refutable.rs:4:5
   |
LL |     a + b
   |     ^^^^^
   |
   = help: add #![feature(const_fn)] to the crate attributes to enable

error: aborting due to 2 previous errors

Some errors occurred: E0005, E0723.
For more information about an error, try `rustc --explain E0005`.
